Fixed layout problem when using a lot of editor tabs (github issue #451)

--- a/src-gwt/org/opencms/gwt/client/ui/css/tabbedPanel.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/tabbedPanel.css
@@ -8,6 +8,12 @@
 	position: static !important;
 	height: 27px;
 }
+
+.wrapTabs.classicTabs.gwt-TabLayoutPanel .gwt-TabLayoutPanelTabBar .gwt-TabLayoutPanelTabs{
+	height: auto !important; 
+}
+
+
 .gwt-TabLayoutPanel .tabPanel {
 }
 .gwt-TabLayoutPanel .tabLeftMargin {
@@ -24,6 +30,10 @@
 .buttonTabs.gwt-TabLayoutPanel .gwt-TabLayoutPanelTabBar {
 	height: auto;
 	display: block;
+}
+
+.wrapTabs.gwt-TabLayoutPanel .gwt-TabLayoutPanelTabBar { 
+	height: auto !important; 
 }
 
 .buttonTabs .gwt-TabLayoutPanelTabs {
